# Rust-REST-E-commerce

./: Cargo.toml
api/: README.md
application/: README.md
common/: Cargo.toml  README.md
docs/: architecture.md
domain/: README.md
infrastructure/: README.md
modules/: README.md
modules/reviews/: Cargo.toml
presentation/: README.md
