[workspace]
members = [
    "api",
    "application",
    "domain",
    "infrastructure",
    "presentation",
    "common",

    "modules/users",
    "modules/auth",
    "modules/products",
    "modules/orders",
    "modules/payments",
    "modules/inventory",
    "modules/reviews",
    "modules/notifications"
    ]
